# 911_calls_numpy2

./: .gitignore  README.md  pyproject.toml
911_calls_regression/: calls.ipynb  house_prices.ipynb  terry_stops.ipynb
911_calls_regression/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  calls-checkpoint.ipynb  house_prices-checkpoint.ipynb
tests/: test_911_calls_regression.py
