[tool.poetry]
name = "911-calls-regression"
version = "0.1.0"
description = ""
authors = ["Lee-Roy King <leeroywking@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.1.5"
jupyter = "^1.0.0"
numpy = "^1.19.0"
pandas = "^1.0.5"
seaborn = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
